# modern-dataframes

./: .gitignore  README.md  dask_groupby_mean.py  modin_magic.py  polars_pandas_benchmark.ipynb  polars_pandas_benchmark.md  pyproject.toml  requirements.txt  sales_data.csv
src/misc/: dask_groupby_mean.py
src/polars_advanced_techniques/: README.md  concat_diagonal.py  concat_str.py  lazy_evaluation.py  list_methods.py  map_batches.py  read_database.py  rolling_functions.py  sales.csv  sql_query.py  struct_columns.py  window_functions.py
src/polars_vs_pandas/: dask_groupby_mean.py  modin_magic.py  polars_pandas_benchmark.ipynb  polars_tutorial.ipynb  products.csv
