[project]
name = "polars-vs-pandas"
version = "0.1.0"
description = ""
authors = [
    {name = "Tammy DiPrima",email = "tammy.diprima@stonybrook.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars (>=1.32.3,<2.0.0)",
    "modin[all] (>=0.35.0,<0.36.0)",
    "dask (>=2025.7.0,<2026.0.0)"
]

[tool.poetry]
packages = [{include = "polars_vs_pandas", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
